# untitled-bird-project

./: README.md
ebird-web/: README.md  pyproject.toml
ebird-web/ebird-web/ebird_web/: __init__.py
ebird-web/ebird_web/: scraper.py
